# hello-world-ai

./: package-lock.json  package.json
.github/: copilot-instructions.md
.github/instructions/: myapp.instructions.md
src/: App.jsx  index.css
src/components/: Datepicker.jsx  Datepicker.stories.jsx
temp-backend/: API_README.md  Cargo.toml  TESTING.md  TEST_API.md  app.db  detail.md
temp-backend/migrations/: 001_create_users_table.sql
temp-backend/src/: database.rs  handlers.rs  jwt.rs  lib.rs  main.rs  models.rs  repository.rs  test_helpers.rs
temp-backend/static/: swagger-ui.html
temp-frontend/: STORYBOOK.md  package.json
temp-frontend/.storybook/: preview.js
temp-frontend/src/: index.css
temp-frontend/src/components/: Datepicker.jsx  Datepicker.specs.md  Datepicker.test.jsx
